2018-07-20  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-handle-file-truename):
	* tramp-adb.el (tramp-adb-handle-file-truename):
	* tramp-sh.el (tramp-sh-handle-file-truename): Fix problem
	with trailing slash.  (Bug#32218)

	* trampver.el.in (customize-package-emacs-version-alist):
	Add Tramp version integrated in Emacs 26.2.

2018-07-06  Michael Albinus  <michael.albinus@gmx.de>

	* Makefile.in:
	* tramp-sh.el (tramp-remote-process-environment):
	Use proper spelling "Tramp".

2018-06-27  Michael Albinus  <michael.albinus@gmx.de>

	Version 2.3.4 released.

	* tramp-smb.el (tramp-smb-handle-delete-directory): Check, that
	the directory has been removed indeed.

2018-06-25  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file-directly): Use "-R"
	rather than -"r" for recursive copy of directories.

2018-06-24  Michael Albinus  <michael.albinus@gmx.de>

	* tramp-sh.el (tramp-do-copy-or-rename-file): In case of FILENAME
	being a directory, check whether `copy-directory' could be
	avoided.  Suggested by Stephen Nutt <stnutt@gmail.com>.  (Bug#31941)
	(tramp-do-copy-or-rename-file-directly): Call "cp" with "-r".

2018-05-29  Michael Albinus  <michael.albinus@gmx.de>

	* tramp.el (tramp-mode, tramp-verbose)
	(tramp-backup-directory-alist, tramp-auto-save-directory)
	(tramp-encoding-shell, tramp-encoding-command-switch)
	(tramp-encoding-command-interactive, tramp-default-method)
	(tramp-default-method-alist, tramp-default-user)
	(tramp-default-user-alist, tramp-default-host)
	(tramp-default-host-alist, tramp-default-proxies-alist)
	(tramp-save-ad-hoc-proxies, tramp-restricted-shell-hosts-alist)
	(tramp-local-end-of-line, tramp-rsh-end-of-line)
	(tramp-login-prompt-regexp, tramp-shell-prompt-pattern)
	(tramp-password-prompt-regexp, tramp-wrong-passwd-regexp)
	(tramp-yesno-prompt-regexp, tramp-yn-prompt-regexp)
	(tramp-terminal-prompt-regexp)
	(tramp-operation-not-permitted-regexp, tramp-copy-failed-regexp)